# docs/swagger.json
@@ -672,7 +672,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "通过文件对象绝对路径,下载文件对象,可通过参数获取文件对象详细信息，或者自定义读取对象数据块",
+                "description": "通过文件对象绝对路径,下载文件对象,可通过参数获取文件对象详细信息，或者自定义读取对象数据块\n* 注：\n1. offset \u0026\u0026 size(最大20MB，否则400错误) 参数校验失败时返回状态码400和对应参数错误信息，无误时，返回bytes数据流\n2. 不带参数时，返回整个文件对象；\n* Http Code: 状态码200：\nevhb_obj_size,文件对象总大小信息,通过标头headers传递：自定义读取时：返回指定大小的bytes数据流；\n其他,返回整个文件对象bytes数据流；",
                 "consumes": [
                     "application/json"
                 ],
@@ -682,6 +682,7 @@
                 "tags": [
                     "object对象"
                 ],
+                "summary": "下载对象",
                 "parameters": [
                     {
                         "type": "string",
@@ -712,10 +713,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "file",
                         "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/controllers.UserListJSON"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -743,7 +743,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "上传对象分片",
+                "description": "通过文件对象绝对路径分片上传文件对象\n## 说明：\n* 小文件可以作为一个分片上传，大文件请自行分片上传，分片过大可能上传失败，建议分片大小5-10MB；对象上传支持部分上传，\n分片上传数据直接写入对象，已成功上传的分片数据永久有效且不可撤销，请自行记录上传过程以实现断点续传；\n* 文件对象已存在时，数据上传会覆盖原数据，文件对象不存在，会自动创建文件对象，并且文件对象的大小只增不减；\n如果覆盖（已存在同名的对象）上传了一个新文件，新文件的大小小于原同名对象，上传完成后的对象大小仍然保持\n原对象大小（即对象大小只增不减），如果这不符合你的需求，参考以下2种方法：\n(1)先尝试删除对象（对象不存在返回404，成功删除返回204），再上传；\n(2)访问API时，提交reset参数，reset=true时，在保存分片数据前会先调整对象大小（如果对象已存在），未提供reset参\n数或参数为其他值，忽略之。\n## 特别提醒：\n切记在需要时只在上传第一个分片时提交reset参数，否者在上传其他分片提交此参数会调整对象大小，已上传的分片数据会丢失。\n\n## 注意：\n分片上传现不支持并发上传，并发上传可能造成脏数据，上传分片顺序没有要求，请一个分片上传成功后再上传另一个分片",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -753,6 +753,7 @@
                 "tags": [
                     "object对象"
                 ],
+                "summary": "上传对象分片",
                 "parameters": [
                     {
                         "type": "string",
@@ -788,6 +789,137 @@
                         "name": "chunk_size",
                         "in": "formData",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    },
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "删除一个对象",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "object对象"
+                ],
+                "summary": "删除对象",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "bucketname",
+                        "name": "bucketname",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "objpath",
+                        "name": "objpath",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    },
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "对象共享或私有权限设置",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "object对象"
+                ],
+                "summary": "对象共享或私有权限设置",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "bucketname",
+                        "name": "bucketname",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "objpath",
+                        "name": "objpath",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "是否分享，用于设置对象公有或私有, true(公开)，false(私有)",
+                        "name": "share",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "对象公开分享天数(share=true时有效)，0表示永久公开，负数表示不公开，默认为0",
+                        "name": "days",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1531,6 +1663,9 @@
         "models.HarborObject": {
             "type": "object",
             "properties": {
+                "access_permission": {
+                    "type": "string"
+                },
                 "dlc": {
                     "description": "该文件的下载次数，目录时dlc为0",
                     "type": "integer"
